--- a/packages/styles/components/select.css
+++ b/packages/styles/components/select.css
@@ -132,7 +132,8 @@
 
 /* Similar to popover content styles */
 .select__popover {
-  @apply min-w-(--trigger-width) origin-(--trigger-anchor-point) scroll-py-1 overflow-y-auto overscroll-contain rounded-3xl bg-overlay p-0 text-sm;
+  @apply min-w-(--trigger-width) origin-(--trigger-anchor-point) scroll-py-1 overflow-y-auto overscroll-contain bg-overlay p-0 text-sm;
+  border-radius: min(32px, var(--radius-3xl));
   box-shadow: var(--shadow-overlay);
 
   /* Focus state */
